(fix) implement domain renewal and enhance user experience

--- a/client-web/acquisto.html
+++ b/client-web/acquisto.html
@@ -31,8 +31,8 @@
       <br><br>
       <button type="submit" id="acquista">Acquista</button>
       <button type="button" id="indietro">Indietro</button>
+      <div id="result"></div>
     </form>
-    
     <p id="err"></p>
 
     <script src="acquisto.js"></script>
