--- a/client-web/auth/register.html
+++ b/client-web/auth/register.html
@@ -25,6 +25,9 @@
 
 		<label for="input-password">Password:</label>
 		<input type="password" id="input-password" name="password" required>
+		<small style="display: block; margin-top: 5px; font-size: 0.8em; color: #555;">
+			La password deve contenere almeno 8 caratteri, una lettera maiuscola, una minuscola, un numero e un carattere speciale (es. #, ?, !, @, $, ecc.).
+		</small>
 
 		<input type="submit" value="Register">
 		<p>Already have an account? <a href="./login.html">Login here</a></p>
